--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Rockect</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+  <link rel="icon" type="image/x-icon" href="https://www.rocketfy.co/favicon-32x32.png?v=9ddfe090ce42fef14cdadf776c27c9a1">
 </head>
 <body>
   <app-root></app-root>
